--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,13 @@
     <link rel="apple-touch-icon" href="logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Test</title>
+
+    <style>
+      @font-face {
+        font-family: IBM Plex Sans;
+        src: url(./Ibmplexsans.ttf);
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
