--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       }
     </style>
   </head>
-  <body>
+<body ontouchstart=""> <!--  https://stackoverflow.com/questions/3885018-->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div class="sprite"></div>
