--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -17,6 +17,14 @@
       @font-face {
         font-family: IBM Plex Sans;
         src: url(./Ibmplexsans.ttf);
+        font-weight: 300;
+        font-style: normal;
+      }
+      @font-face {
+        font-family: IBM Plex Sans;
+        src: url(./Ibmplexsanssemibold.ttf);
+        font-weight: 600;
+        font-style: normal;
       }
     </style>
   </head>
