--- a/public/index.html
+++ b/public/index.html
@@ -32,5 +32,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div class="sprite"></div>
+    <iframe name="frame" width="90%" height="90%" style="position: absolute; visibility: hidden"></iframe>
   </body>
 </html>
