arrows svg angle

--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,13 @@
     <style>
       @font-face {
         font-family: IBM Plex Sans;
-        src: url(./Ibmplexsans.ttf);
+        src: url(fonts/Ibmplexsans.ttf);
         font-weight: 300;
         font-style: normal;
       }
       @font-face {
         font-family: IBM Plex Sans;
-        src: url(./Ibmplexsanssemibold.ttf);
+        src: url(fonts/Ibmplexsanssemibold.ttf);
         font-weight: 600;
         font-style: normal;
       }
