--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 <body ontouchstart=""> <!--  https://stackoverflow.com/questions/3885018-->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <div class="sprite"></div>
+    <div style="position: absolute;" class="sprite"></div>
     <iframe name="frame" width="90%" height="90%" style="position: absolute; visibility: hidden"></iframe>
   </body>
 </html>
