--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -11,4 +11,10 @@
         font-weight: 600;
         font-style: normal;
     }
+    @font-face {
+        font-family: Noto Sans Wind;
+        src: url(fonts/NotoSansWind-Regular.woff2);
+        font-weight: 300;
+        font-style: normal;
+    }
 </style>
