--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,12 @@
         font-weight: 600;
         font-style: normal;
       }
+      @font-face {
+          font-family: Noto Sans Wind;
+          src: url(fonts/NotoSansWind-Regular.woff2);
+          font-weight: 300;
+          font-style: normal;
+      }
     </style>
   </head>
 <body ontouchstart=""> <!--  https://stackoverflow.com/questions/3885018-->
