table screen rework

--- a/.storybook/preview-body.html
+++ b/.storybook/preview-body.html
@@ -1,3 +1,4 @@
 <div id="custom-root">
     <div style="display: none" class="sprite"></div>
+    <iframe name="frame" width="90%" height="90%" style="position: absolute; visibility: hidden"></iframe>
 </div>
